WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306619
REGRESSION(
306488@main
): Broke Production builds
https://bugs.webkit.org/show_bug.cgi?id=306619
Summary
REGRESSION(306488@main): Broke Production builds
Jonathan Bedard
Reported
2026-01-30 08:31:30 PST
306488@main
broke Apple Internal production builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-01-30 08:31:31 PST
<
rdar://problem/169277976
>
Jonathan Bedard
Comment 2
2026-01-30 08:32:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57560
EWS
Comment 3
2026-01-30 08:35:21 PST
Committed
306495@main
(be4499fd8060): <
https://commits.webkit.org/306495@main
> Reviewed commits have been landed. Closing PR #57560 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug