REGRESSION(306488@main): Broke Production builds https://bugs.webkit.org/show_bug.cgi?id=306619 rdar://169277976

Unreviewed build fix.

* Source/WebCore/Modules/streams/StreamTransferUtilities.h:

Canonical link: https://commits.webkit.org/306495@main